# b_sample

./: CMakeLists.txt  README.md  b_spline.cpp  main.cpp  test.cpp
math/: b_spline.h
